fix: Fixes misaligned phone extension field (#3688)
OKTA-790283 fix: Fixes misalignment of phone number and phone extension fields

Changes the form layout on the phone authenticator page from inline to stacked, in order to address field misalignment when the phone extension field label is too long.

--- a/assets/sass/v2/_enroll-phone.scss
+++ b/assets/sass/v2/_enroll-phone.scss
@@ -2,21 +2,6 @@
   .okta-form-subtitle {
     text-align: center;
   }
-  &__phone {
-    &--small {
-      display: inline-block;
-      max-width: 70%;
-    }
-  }
-  &__phone-ext {
-    display: inline-block;
-    position: absolute;
-    width: 27%;
-    margin-left: 3%;
-  }
-  &__phone-ext.o-form-fieldset:last-child {
-    margin-bottom: 0;
-  }
   &__phone-code {
     min-width: 3rem;
     text-align: center;
